--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "prop-types": "^15.6.2",
     "react-navigation": "^4.x",
     "react-navigation-drawer": "github:anoojkrishnan/react-navigation-drawer",
-    "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1",
-    "remove": "^0.1.5"
+    "react-navigation-stack": "2.10.4",
+    "react-navigation-tabs": "^2.11.2",
+    "remove": "0.1.5"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.47",
