--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-navigation": "^4.x",
     "react-navigation-drawer": "github:anoojkrishnan/react-navigation-drawer",
     "react-navigation-stack": "2.10.4",
-    "react-navigation-tabs": "^2.11.2",
+    "react-navigation-tabs": "2.11.2",
     "remove": "0.1.5"
   },
   "devDependencies": {
